--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@assets/*": ["src/assets/*"],
-      "@components/*": ["src/components/*"],
+      "@components/*": ["src/assets/login/components/*"],
       "@pages/*": ["src/pages/*"],
       "@services/*": ["src/services/*"]
     }
