--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "fix": "prettier --write . && eslint --fix --ext .jsx ."
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.6",
+    "@mui/styled-engine-sc": "^5.8.0",
     "axios": "^0.27.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
